add prototype of SQL console.